--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask==0.10.1
 Flask-Admin==1.0.7
 Flask-Login==0.2.9
 Flask-SQLAlchemy==1.0
+Flask-WTF==0.9.4
 Jinja2==2.7.2
 MarkupSafe==0.18
 SQLAlchemy==0.9.1
